--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="icon" type="image/x-icon" href="../static/icon.png" />
 		<title>Sarwin Rajiah</title>
 		<style>
 			body {
@@ -11,6 +12,9 @@
 		</style>
 	</head>
 	<body>
+		<div id="loading">
+			<h1>Loading</h1>
+		</div>
 		<script src="./script.js" type="module"></script>
 	</body>
 </html>
