--- a/index.html
+++ b/index.html
@@ -1,23 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sarwin Rajiah</title>
-    <link rel="stylesheet" href="./styles/styles.css">
-  </head>
-  <body>
-    <div class="center">
-        <img src="./assets/images/under-construction.png" alt="Under Construction"> <br>
-        <h1>SARWIN RAJIAH</h1>
-        <hr>
-            <ul class="contacts">
-                <li><a href="https://github.com/SarwinR" target="_blank"><img src="./assets/images/github-sign.png" alt="GitHub" ></a></li>
-                <li><a href="https://www.linkedin.com/in/sarwinr/" target="_blank"><img src="./assets/images/linkedin.png" alt="LinkedIn"></a></li>
-                <li><a href="https://medium.com/@sarwinr" target="_blank"><img src="./assets/images/medium.png" alt="Medium"></a></li>
-                <li><a href="https://twitter.com/sarwinwastaken" target="_blank"><img src="./assets/images/twitter-sign.png" alt="Twitter"></a></li>
-            </ul>
-    </div>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><link rel="icon" type="image/x-icon" href="assets/images/78e13e95c5c3cb62.png"/><style>body{margin:0;padding:0;background:#262626}.ring{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);width:150px;height:150px;background:0 0;border:3px solid #3c3c3c;border-radius:50%;text-align:center;line-height:150px;font-family:sans-serif;font-size:20px;color:#fff000;letter-spacing:4px;text-transform:uppercase;text-shadow:0 0 10px #fff000;box-shadow:0 0 20px rgba(0,0,0,.5)}.ring:before{content:"";position:absolute;top:-3px;left:-3px;width:100%;height:100%;border:3px solid transparent;border-top:3px solid #fff000;border-right:3px solid #fff000;border-radius:50%;animation:animateC 2s linear infinite}span{display:block;position:absolute;top:calc(50% - 2px);left:50%;width:50%;height:4px;background:0 0;transform-origin:left;animation:animate 2s linear infinite}span:before{content:"";position:absolute;width:16px;height:16px;border-radius:50%;background:#fff000;top:-6px;right:-8px;box-shadow:0 0 20px #fff000}@keyframes animateC{0%{transform:rotate(0)}100%{transform:rotate(360deg)}}@keyframes animate{0%{transform:rotate(45deg)}100%{transform:rotate(405deg)}}</style><title>Sarwin Rajiah</title><script defer="defer" src="bundle.ddf9d51104d50d1b.js"></script></head><body><div class="ring">Loading <span></span></div><script src="a6aaebd785dc81a9.js" type="module"></script></body></html>
